[package]
name = "qtglean"
version = "0.1.0"
edition = "2021"

[lib]
name = "qtglean"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
ffi-support = "0.4.4"
glean = { path = "../3rdparty/glean/glean-core/rlb" }
glean-core = { path = "../3rdparty/glean/glean-core" }
log = "0.4.22"
once_cell = "1.20.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0.217"
serde_json = "1.0.135"

[build-dependencies]
cbindgen = "0.27.0"
