[package]
name = "qtglean"
version = "0.1.0"
edition = "2021"

[lib]
name = "qtglean"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
ffi-support = "0.4.4"
glean = { path = "../3rdparty/glean/glean-core/rlb" }
glean-core = { path = "../3rdparty/glean/glean-core" }
log = "0.4.27"
once_cell = "1.21.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"

[build-dependencies]
cbindgen = "0.28.0"
