[package]
name = "signature"
version = "0.2.0"
edition = "2021"

[dependencies]
asn1-rs = { version = "0.6.2", features=["datetime"] }
oid-registry = "0.7"
data-encoding = "2.7.0"
ffi-support = "0.4.4"
thiserror = "2.0.11"
hex = "0.4"
ring = "0.17.8"
x509-parser = { version = "0.17.0", features = ["verify", "validate"] }

[lib]
name = "signature"
path = "src/lib.rs"
crate-type = ["staticlib"]
